--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,8 @@
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M5</version>
+            <version>3.0.0-M3</version>
+            <type>maven-plugin</type>
         </dependency>
     </dependencies>
 
