--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,17 @@
             <artifactId>commons-text</artifactId>
             <version>1.8</version>
         </dependency>
+        <!-- swagger -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
         <!--        test-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
