--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
         depends_on:
             - db
         environment:
-            SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/bbgh?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+            SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/bbgh?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
             SPRING_DATASOURCE_USERNAME: bbgh
             SPRING_DATASOURCE_PASSWORD: bbgh
         command: java -jar /app.jar
