fix logging for profiles

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ mvnw
 *.iws
 *.iml
 *.ipr
-logs
-
+logs/
+LOG_PATH_IS_UNDEFINED/
+src/test/resources/logs/
 !.idea/runConfigurations/app_debug_listen.xml
