--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -9,6 +9,8 @@ spring:
     url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
     username: sa
     password: sa
+  flyway:
+    enabled: false
 
 crawler:
   storage:
