--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
         environment:
             SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/bbgh?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
             SPRING_DATASOURCE_USERNAME: bbgh
-            SPRING_DATASOURCE_PASSWORD: bbgh
+            SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD:-bbgh}
         command: java -jar /app.jar
     db:
         image: mysql
@@ -21,8 +21,8 @@ services:
         environment:
             MYSQL_DATABASE: bbgh
             MYSQL_USER: bbgh
-            MYSQL_PASSWORD: bbgh
-            MYSQL_ROOT_PASSWORD: root
+            MYSQL_PASSWORD: ${MYSQL_PASSWORD:-bbh}
+            MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-bbgh}
         volumes:
             - db-data:/var/lib/mysql
 volumes:
