--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
             - db
         environment:
             SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/bbgh?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
-            SPRING_DATASOURCE_USERNAME: ${MYSQL_PASSWORD:-root}
+            SPRING_DATASOURCE_USERNAME: ${MYSQL_USERNAME:-root}
             SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD:-bbgh}
         command: java -jar /app.jar
     db:
